@@ -1,5 +1,8 @@
 #/bin/bash
 
+# Ignore JVM warnings
+export JAVA_TOOL_OPTIONS="--enable-native-access=ALL-UNNAMED"
+
 # Clean
 rm -f stub-unaligned.apk stub.apk stub.apk.idsig
 
@@ -7,15 +10,15 @@ rm -f stub-unaligned.apk stub.apk stub.apk.idsig
 MIN_SDK="${1:-21}"
 
 # Make APK
-aapt package -M AndroidManifest.xml -I $ANDROID_HOME/platforms/android-35/android.jar -F stub-unaligned.apk --min-sdk-version $MIN_SDK --target-sdk-version 35
+aapt package -M AndroidManifest.xml -I $ANDROID_HOME/platforms/android-37.2/android.jar -F stub-unaligned.apk --min-sdk-version $MIN_SDK --target-sdk-version $MIN_SDK
 
 # Alingn APK
 zipalign 4 stub-unaligned.apk stub.apk
 rm stub-unaligned.apk
 
 # Sign APK
-apksigner sign --cert data/cert.pem --key data/cert.pk8 --v1-signing-enabled true --v2-signing-enabled false --v3-signing-enabled false --v4-signing-enabled false stub.apk
+apksigner sign --cert data/cert.pem --key data/cert.pk8 stub.apk
 
-rm stub.apk.idsig
+rm -f stub.apk.idsig
 
 echo "Created: stub.apk"
